feat(API): rebase multi branches
