# doc/swagger.yml
@@ -226,32 +226,30 @@ paths:
         '200':
           description: OK
   
-  '/{idBranch}/rebase':
+  '/branches/rebase':
     post:
       tags:
         - branch
-      summary: "Création d'une nouvelle branche en appliquant les patchs de cette branche sur une autre branche"
+      summary: "Création d'une nouvelle branche en appliquant les patchs des branches sur la nouvelle branche"
       description: ""
       parameters:
-        - in: path
+        - in: query
           name: idBranch
-          description: l'identifiant de la branche
+          description: Les identifiants des branches à rebase
           required: true
           schema:
-            type: integer
+            type: array
+            items:
+              type: integer
+          style: form
+          explode: true
         - in: query
           name: name
+          descritption: Nom de la branche où aura lieu le rebase
           required: true
           schema:
             type: string
           example: "maNouvelleBranche"
-        - in: query
-          name: idBase
-          description: l'identifiant de la branche à utiliser comme base
-          required: true
-          schema:
-            type: integer
-          example: 0
       responses:
         '200':
           description: OK
